<resources>
    <string name="popular_news">Popular News</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="no_results_found">No search result found</string>
    <string name="last_day">last 1 Day</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="news_details">News Details</string>
    <string name="publish_date_with_dynamic_value">Published Date: %s</string>
    <string name="updated_date_with_dynamic_value">Updated Date: %s</string>

</resources>