<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newslist.NewsListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/popular_news"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="6dp"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/popular_news"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filter">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_search"
            style="@style/AppTheme.TextInputLayoutOutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_search_list"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:cursorVisible="true"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="46dp"
                android:paddingLeft="46dp"
                android:paddingTop="10dp"
                android:paddingEnd="46dp"
                android:paddingRight="46dp"
                android:paddingBottom="10dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_clear_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:src="@drawable/ic_close_search"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_search"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_search"
            app:layout_constraintTop_toTopOf="@+id/text_input_layout_search" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:src="@drawable/ic_search_list"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_search"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout_search"
            app:layout_constraintTop_toTopOf="@+id/text_input_layout_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/no_results_found"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_news_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        tools:listitem="@layout/item_news"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_search" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:gravity="center"
        tools:visibility="gone"
        android:background="@color/white">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>